# ucan-monitor

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini  org.flatpak.ucan-monitor.yml  readme_ubuntu.md
cmake/git-info/: GitInfo.cmake
cmake/git-version-tracking/: CMakeLists.txt  git-version-tracking.cmake  git.h
include/bsclog/: bsclog.cpp  bsclog.h
include/cmdexec/: cmdexec.h
include/csv_logger/: csv_logger_date.hpp  csv_logger_num.hpp
include/csv_writer/: csv_writer.h
scripts/: socketcan_check.sh  socketcan_enable.sh  socketcan_utils.sh  start-ucan-monitor.sh  ucan-monitor.desktop
scripts/autostart/: README.md  install.sh  launch-ucan-monitor.sh.in  start-ucan-monitor.sh  ucan-cansocket.service  ucan-monitor.desktop  ucan-monitor.service  ucan-monitor.service.in  uninstall.sh
src/: main.cpp  ui_config.h
src/bsclog/: bsclog.cpp  bsclog.h
src/cansocket/: cansocket.cpp  cansocket.h
src/reference_manager/: reference_manager.cpp  reference_manager.h
src/ucanopen/: ucanopen_def.h
src/ucanopen/client/: client.cpp  client.h
src/ucanopen/server/: server.cpp  server.h
src/ucanopen/server/impl/: impl_server.cpp  impl_server.h
src/ucanopen/server/services/: server_config_service.h  server_heartbeat_service.h  server_log_service.cpp  server_log_service.h  server_rpdo_service.cpp  server_rpdo_service.h  server_sdo_service.cpp  server_sdo_service.h  server_tpdo_service.cpp  server_tpdo_service.h  server_watch_service.cpp  server_watch_service.h
src/ucanopen/server/services/config/: server_config_service.cpp  server_config_service.h
src/ucanopen/server/services/heartbeat/: server_heartbeat_service.h
src/ucanopen/server/services/log/: server_log_service.cpp  server_log_service.h
src/ucanopen/server/services/rpdo/: server_rpdo_service.h
src/ucanopen/server/services/sdo/: server_sdo_service.h
src/ucanopen/server/services/tpdo/: server_tpdo_service.cpp  server_tpdo_service.h
src/ucanopen/server/services/watch/: server_watch_service.cpp  server_watch_service.h
src/ucanopen/server/utils/: server_od_utils.cpp  server_od_utils.h
src/ucanopen_devices/atvvcu/server/: atvvcu_server.h
src/ucanopen_devices/launchpad/server/: launchpad_server.h
src/ucanopen_devices/srmdrive/server/: srmdrive_def.h  srmdrive_server.h
src/ucanopen_servers/atvvcu/: atvvcu_def.h  atvvcu_objectdictionary.cpp  atvvcu_server.cpp  atvvcu_server.h
src/ucanopen_servers/atvvcu/util/: accl.h  aux.h  bms.h  brakes.h  dash.h  drive.h  esp.h  gear.h  pdm.h
src/ucanopen_servers/brkdrive/: brkdrive_def.h  brkdrive_objectdictionary.cpp  brkdrive_server.cpp  brkdrive_server.h
src/ucanopen_servers/crd600/: crd600_server.cpp  crd600_server.h
src/ucanopen_servers/launchpad/: launchpad_server.cpp  launchpad_server.h
src/ucanopen_servers/loco/: loco_def.h  loco_objectdictionary.cpp  loco_server.cpp  loco_server.h
src/ucanopen_servers/moyka/: moyka_def.h  moyka_objectdictionary.cpp  moyka_server.cpp  moyka_server.h
src/ucanopen_servers/sevpress/: sevpress_def.hpp  sevpress_def_sys.hpp  sevpress_def_syslog.hpp  sevpress_od.cpp  sevpress_server.cpp  sevpress_server.hpp
src/ucanopen_servers/shm80/: shm80_def.h  shm80_def_syslog.h  shm80_od.cpp  shm80_server.cpp  shm80_server.h
src/ucanopen_servers/srmdrive/: srmdrive_def.h  srmdrive_objectdictionary.cpp  srmdrive_server.cpp  srmdrive_server.h
src/ui/canbussetup/: canbussetup.cpp  canbussetup.h
src/ui/components/: checkbox_tristate.h  drawable.h  togglebutton.h
src/ui/console/: console.cpp  console.h
src/ui/controlpanel/: interface.h
src/ui/controlpanel/srmdrive/: controlpanel.cpp  controlpanel.h
src/ui/datapanel/: interface.h
src/ui/datapanel/srmdrive/: datapanel.cpp  datapanel.h
src/ui/devices/srmdrive/data/: srmdrive_data.cpp  srmdrive_data.h
src/ui/log/: log.cpp  log.h
src/ui/mainview/: mainview.cpp  mainview.h
src/ui/mainwindow/: mainwindow.cpp  mainwindow.h
src/ui/options/: options.cpp  options.h
src/ui/optionswindow/: optionswindow.cpp  optionswindow.h
src/ui/serverselector/: serverselector.cpp  serverselector.h
src/ui/serversetup/: serversetup.cpp  serversetup.h
src/ui/serversetuppanel/: serversetuppanel.cpp  serversetuppanel.h
src/ui/statuspanel/: interface.h
src/ui/statuspanel/srmdrive/: statuspanel.cpp  statuspanel.h
src/ui/tool/: tool.h
src/ui/ucanopen_servers/atvvcu/bmspanel/: bmspanel.cpp  bmspanel.h
src/ui/ucanopen_servers/atvvcu/dashboard/: dashboard.cpp  dashboard.h
src/ui/ucanopen_servers/atvvcu/motorcontrolpanel/: motorcontrolpanel.cpp  motorcontrolpanel.h
src/ui/ucanopen_servers/atvvcu/motordatapanel/: motordatapanel.cpp  motordatapanel.h
src/ui/ucanopen_servers/atvvcu/pdmcontrolpanel/: pdmcontrolpanel.cpp  pdmcontrolpanel.h
src/ui/ucanopen_servers/atvvcu/pdmpanel/: pdmpanel.cpp  pdmpanel.h
src/ui/ucanopen_servers/atvvcu/systempanel/: systempanel.cpp  systempanel.h
src/ui/ucanopen_servers/brkdrive/controlpanel/: controlpanel.cpp  controlpanel.h
src/ui/ucanopen_servers/brkdrive/datapanel/: datapanel.cpp  datapanel.h
src/ui/ucanopen_servers/brkdrive/statuspanel/: statuspanel.cpp  statuspanel.h
src/ui/ucanopen_servers/loco/controlpanel/: controlpanel.cpp  controlpanel.h
src/ui/ucanopen_servers/loco/datapanel/: datapanel.cpp  datapanel.h
src/ui/ucanopen_servers/loco/statuspanel/: statuspanel.cpp  statuspanel.h
src/ui/ucanopen_servers/moyka/panel/: panel.cpp  panel.h
src/ui/ucanopen_servers/sevpress/controlpanel/: controlpanel.cpp  controlpanel.hpp
src/ui/ucanopen_servers/sevpress/datapanel/: datapanel.cpp  datapanel.hpp
src/ui/ucanopen_servers/sevpress/statuspanel/: statuspanel.cpp  statuspanel.hpp
src/ui/ucanopen_servers/shm80/controlpanel/: controlpanel.cpp  controlpanel.h
src/ui/util/: style.cpp  style.h  togglebutton.h  util.h
src/ui/view/: view.h
src/ui/watchcharts/: watchcharts.cpp  watchcharts.h
src/ui/watchpanel/: watchpanel.cpp  watchpanel.h
src/ui/watchplot/: watchplot.cpp  watchplot.h
tests/: angle-test.csv  speed-test.csv  torque-test.csv
(+16 files in other folders)
